--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-router-dom": "^7.11.0",
-    "lucide-react": "^0.562.0",
-    "recharts": "^3.6.0",
-    "react-dom": "^19.2.3",
     "react": "^19.2.3",
-    "jspdf": "^3.0.4",
-    "xlsx": "^0.18.5"
+    "react-dom": "^19.2.3",
+    "react-router-dom": "7.1.1",
+    "lucide-react": "0.474.0",
+    "recharts": "2.15.0",
+    "jspdf": "2.5.1",
+    "xlsx": "0.18.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
