conecção com supabase

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lucide-react": "0.474.0",
     "recharts": "2.15.0",
     "jspdf": "2.5.1",
-    "xlsx": "0.18.5"
+    "xlsx": "0.18.5",
+    "@supabase/supabase-js": "2.39.7"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
